--- a/render.yaml
+++ b/render.yaml
@@ -2,14 +2,9 @@ services:
   - type: web
     name: football-predictor
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: python app.py
     plan: free
-    region: frankfurt
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn app:app
     envVars:
-      - key: CSV_URL
-        value: https://docs.google.com/spreadsheets/d/e/2PACX-1vRIpvfzyZL9O86efs8m20qxAISHTeBm89zC7MOH19xjERyNFhC-xF2r3vJAC_jJzh-L9IuqLiLL0Fi-/pub?output=csv
-      - key: SECRET_KEY
-        generateValue: true
-      - key: DEBUG
-        value: false
+      - key: PORT
+        value: 10000
